feat: Invoice print added and styling fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,18 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
+/* Reset */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  font-family: "Inter", sans-serif;
+}
+
+@media print {
+    .non-printable{
+        display: none !important;
+    }
 }
