--- a/client/src/components/NewInvoice.css
+++ b/client/src/components/NewInvoice.css
@@ -16,7 +16,7 @@
   text-decoration: none;
 }
 
-.btn-red{
+.btn-red {
   color: #fff;
   background: #575757;
 }
@@ -27,7 +27,7 @@
   outline: #000 solid 1px;
 }
 
-hr {
+.invoice_container > hr {
   margin: 0rem 2rem !important;
 }
 
@@ -235,7 +235,7 @@ hr {
     padding: 1rem 1rem;
   }
 
-  hr {
+  .invoice_container > hr {
     margin: 0rem 1rem !important;
   }
 
@@ -260,49 +260,49 @@ hr {
     padding: 1rem;
   }
 
-/* Section-3 */
-.invoice_container > .section-3 {
-  display: flex;
-  flex-direction: column;
-  word-wrap: break-word;
-  padding: 0.2rem 1rem 1.4rem 1rem;
-}
+  /* Section-3 */
+  .invoice_container > .section-3 {
+    display: flex;
+    flex-direction: column;
+    word-wrap: break-word;
+    padding: 0.2rem 1rem 1.4rem 1rem;
+  }
 
-.invoice_container > .section-3 > .items_desk > table th:nth-child(1),
-.invoice_container > .section-3 > .items_desk > table td:nth-child(1) {
-  text-align: center;
-  width: 10%;
-}
+  .invoice_container > .section-3 > .items_desk > table th:nth-child(1),
+  .invoice_container > .section-3 > .items_desk > table td:nth-child(1) {
+    text-align: center;
+    width: 10%;
+  }
 
-.invoice_container > .section-3 > .items_desk > table th:nth-child(2),
-.invoice_container > .section-3 > .items_desk > table td:nth-child(2) {
-  width: 45%;
-}
+  .invoice_container > .section-3 > .items_desk > table th:nth-child(2),
+  .invoice_container > .section-3 > .items_desk > table td:nth-child(2) {
+    width: 45%;
+  }
 
-.invoice_container > .section-3 > .items_desk > table th:nth-child(3),
-.invoice_container > .section-3 > .items_desk > table td:nth-child(3),
-.invoice_container > .section-3 > .items_desk > table th:nth-child(4),
-.invoice_container > .section-3 > .items_desk > table td:nth-child(4) {
-  text-align: center;
-  width: 15%;
-}
+  .invoice_container > .section-3 > .items_desk > table th:nth-child(3),
+  .invoice_container > .section-3 > .items_desk > table td:nth-child(3),
+  .invoice_container > .section-3 > .items_desk > table th:nth-child(4),
+  .invoice_container > .section-3 > .items_desk > table td:nth-child(4) {
+    text-align: center;
+    width: 15%;
+  }
 
-.invoice_container > .section-3 > .items_desk > table th:nth-child(5),
-.invoice_container > .section-3 > .items_desk > table td:nth-child(5) {
-  text-align: center;
-  min-width: 15%;
-}
+  .invoice_container > .section-3 > .items_desk > table th:nth-child(5),
+  .invoice_container > .section-3 > .items_desk > table td:nth-child(5) {
+    text-align: center;
+    min-width: 15%;
+  }
 
-.invoice_container > .section-3 > .items_total > .total > .w-76 p {
-  margin-left: 1rem;
-}
+  .invoice_container > .section-3 > .items_total > .total > .w-76 p {
+    margin-left: 1rem;
+  }
 
-/* Section-4 */
-.invoice_container .section-4 {
-  padding: 0.2rem 1rem 1.4rem 1rem;
-}
+  /* Section-4 */
+  .invoice_container .section-4 {
+    padding: 0.2rem 1rem 1.4rem 1rem;
+  }
 
-.btn-custom{
-  margin-left: 1rem;
-}
+  .btn-custom {
+    margin-left: 1rem;
+  }
 }
