--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,11 @@ body {
 #root{
   display: flex;
   flex-direction: column;
-  /* min-height: 100vh; */
+  min-height: 100vh;
+}
+
+#footer {
+  flex-shrink: none;
 }
 
 @media print {
